package(default_visibility = ["//visibility:public"])

exports_files([
    "llama-server.exe",
    "ggml.dll",
    "ggml-base.dll",
    "ggml-cpu.dll",
    "llama.dll",
    "models/zenz-v3.2-small-Q5_K_M.gguf",
    "licenses/THIRD_PARTY_NOTICES.md",
    "licenses/Apache-2.0.txt",
    "licenses/llama.cpp-MIT.txt",
    "licenses/zenz-v3.2-small-gguf.txt",
])
